--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-    "name": "v8-profiler",
-    "version": "3.6.2beta",
-    "description": "node bindings for the v8 profiler",
-    "homepage": "http://github.com/dannycoates/v8-profiler",
-    "author": "Danny Coates <dannycoates@gmail.com>",
-    "keywords": ["profiler", "inspector"],
-    "engines" : { "node": ">=0.6" },
-    "main" : "v8-profiler",
-    "scripts": {
-        "postinstall": "ln -sf build/Release/profiler.node profiler.node"
-    }
+  "name": "v8-profiler",
+  "version": "3.7.0",
+  "description": "node.js bindings for the v8 profiler",
+  "homepage": "http://github.com/skomski/v8-profiler",
+  "keywords": ["profiler", "inspector"],
+  "engines" : { "node": ">=0.6" },
+  "main" : "lib/v8-profiler",
+  "scripts": {
+     "test": "node test/test-heapshot.js && node test/test-cpu-profiler.js"
+  }
 }
